styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: system-ui, sans-serif;
  background: #171717;
  color: #e9dbc4;
  line-height: 1.6;
  max-width: 1280px;
  margin: auto;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

.nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background: #000;

  & a {
    color: #e9dbc4;
    text-decoration: none;
    padding: 1rem;
  }
}

.nav-top {
  display: none;
}

.nav-burger {
  position: fixed;
  top: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.8);
  padding: 1rem 1.25rem;

  & details {
    position: relative;
  }

  & summary {
    list-style: none;
    cursor: pointer;

  }

  & summary::-webkit-details-marker {
    display: none;
  }

  & .menu {
    position: absolute;
    top: 41px;
    right: -20px;
    background: rgba(0, 0, 0, 0.8);
    text-align: right;
    display: flex;
    flex-direction: column;
  }

  & .menu a {
    border-bottom: 1px solid #222;
  }

  & .menu a:last-child {
    border-bottom: none;
  }
}

.hero {
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: url("./assets/images/compressed-image.webp") center / contain no-repeat;
  backdrop-filter: blur(0);
  mask-image: linear-gradient(
    to bottom,
    #171717 0%,
    #171717 60%,
    #17171700 100%
  );
}

footer {
  text-align: center;
  padding: 1rem;
  font-size: 0.875rem;
  color: #666;
  border-top: 1px solid #222;
}

section {
   padding: 3.5rem 0.5rem 0rem 0.5rem;

  & p {
    margin-top: 1rem;
  }
}

.tvsl {
  display: flex;
  gap: 2rem;
  flex-direction: column;

  & .gallery {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 0.5rem;

    & img {
      width: 100%;
      aspect-ratio: 3/4;
      object-fit: cover;
    }
  }
}

.video-tv {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 0.5rem;

  & .video {
    display: flex;
    flex-direction: column;

    & iframe {
      aspect-ratio: 16 / 9;
      border: 0;
    }
  }
}

.video-highlights {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 0.5rem;

  & .video {
    display: flex;
    flex-direction: column;

    & iframe {
      aspect-ratio: 16 / 9;
      border: 0;
    }
  }
}

.concerts, .radio {
  display: flex;
  gap: 2rem;
  flex-direction: column;
}

.about {
  text-align: center;

  & h1 {
    font-size: 3rem;
  }
}

h2 {
  font-size: 2rem;
}

.contact {
  display: grid;
  gap: 2rem;

  @media (min-width: 768px) {
    grid-template-columns: 1fr 1.2fr;
    min-height: 70vh;
  }

  .contact-image {
    position: relative;
    background: url("./assets/images/SAVE_20260110_141319.jpg") center / cover no-repeat;
    min-height: 60vh;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;

    & h2 {
      font-size: clamp(2.5rem, 5vw, 4rem);
      line-height: 0.95;
    }
  }

  .contact-info {

    & .socials {

      display: flex;
      flex-direction: column;
      gap: 1.25rem;

      & li {
        padding: 0 0 1.25rem 0;
        border-bottom: 2px solid #e9dbc4;
        list-style: none;
        gap: 0.35rem;


        & a {
          display: flex;
          justify-content: space-between;
          color: #e9dbc4;
          text-decoration: none;
          word-break: break-all;

          & strong {
            font-size: 1.5rem;
          }

          & span {
            align-self: center;
          }
        }
      }
    }
  }
}

.button {
  display: inline-block;
  margin-top: 1rem;
  padding: 0.75rem 1.25rem;
  border: 1px solid #fff;
  color: #fff;
  text-decoration: none;
}

.media-list {
  list-style: none;

  & li {
    margin-bottom: 0.75rem;
  }

  & a {
    color: #ccc;
  }
}

.listen-menu {
  position: relative;
  display: inline-block;

  & summary {
    list-style: none;
    cursor: pointer;
  }

  & summary::-webkit-details-marker {
    display: none;
  }

  & .listen-list {
    position: absolute;
    top: calc(100% + 0.5rem);
    left: 0;

    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    background: #000;
    border: 1px solid #333;
    padding: 0.75rem;
    min-width: 130px;
    z-index: 10;
  }

  & a {
    color: white;
    text-decoration: none;
    padding: 0.4rem 0;
    border-bottom: 1px solid #222;

    &:last-child {
      border-bottom: none;
    }

    &:hover {
      opacity: 0.8;
    }
  }
}

.music {

  & .video {
  aspect-ratio: 16 / 9;
  width: 100%;

    & iframe {
      width: 100%;
      height: 100%;
      border: 0;
    }
  }
}

@media (min-width: 768px) {

  .nav-top {
    display: flex;
    position: sticky;
    top: 0;
    z-index: 10;
  }

  .nav-burger {
    display: none;
  }

  .hero {
    background: url("./assets/images/compressed-image.webp") right center / contain no-repeat;
    & h1 {
      font-size: 5rem;
    }
  }

  .video-highlights, .video-tv {
    gap: 2rem;
  }

  .tvsl {
    flex-direction: row;

    & .gallery {
      max-width: 50%;
    }
  }

  .concerts, .radio {
    flex-direction: row;

    & img {
      width: 30%;
    }
  }
}

